# music-similarity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml
api/: feedback_store.py  main.py  schemas.py  search.py
deploy/: modal_upload.py
eval/: annotation_agreement.py  embed_triplets.py  precision_at_k.py  triplet_accuracy.py
notebooks/: music_similarity_colab.ipynb
paper/: advisor-email-draft.md  irb-protocol-draft.md
pipeline/: baseline_faiss.py  colab_pipeline.py  config.py  demucs_stems.py  download_jamendo.py  lyrics.py  mert_embed.py  qdrant_index.py  track_names.py
tests/: test_aspect_heads.py  test_colab_pipeline.py  test_eval.py  test_losses.py  test_personalization.py  test_triplet_engine.py
training/: aspect_heads.py  augmentations.py  dataset.py  losses.py  personalization.py  train.py  triplet_engine.py  triplet_render.py
web/: app.py
