[project]
name = "music-similarity"
version = "0.1.0"
description = "Controllable multi-axis music similarity search: stem separation + MERT embeddings + aspect heads + Qdrant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "demucs>=4.0.1",
    "qdrant-client>=1.9",
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    "faster-whisper>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "requests>=2.31",
    "pydantic>=2.7",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "training", "api", "eval"]
